[tool.poetry]
name = "autoconcept"
version = "0.0.1"
description = "set-up for cross-modal conceptualization in bottleneck models"
authors = ["Danis Alukaev <d.alukaev@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "1.12.1"
torchaudio = "0.12.1"
torchvision = "0.13.1"
conda-lock = "^2.1.0"
numpy = "^1.25.0"
pandas = "^2.0.2"
hydra-core = "^1.3.2"
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
termcolor = "^2.3.0"
terminaltables = "^3.1.10"
pre-commit = "^3.3.3"
easydict = "^1.10"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.2"
torchtext = "^0.12.0"
albumentations = "^1.3.1"
clearml = "^1.12.2"
opencv-python = "^4.8.0.76"
pyspellchecker = "^0.7.2"
pytorch-lightning = "^2.0.7"
spacy = "^3.6.1"
captum = "^0.6.0"
pytest = "^7.4.0"
nltk = "^3.8.1"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.6.0/en_core_web_md-3.6.0.tar.gz"}
seaborn = "^0.12.2"
tqdm = "^4.66.1"
transformers = "^4.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
